scc/tests/cc/error/0022-cpp-if.c
#if 3 != (1,2,3)
   #error 3 != (1,2,3)
#endif

int
main()
{
	return 0;
}
